Updated About Me section

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
             <h2>About Me</h2>
             <p>
                 I'm a 3rd year computer science student.
+                I like travelling and have ventured as far as Fourways.
+                I am a bird-enthusiast and have built a proficiency in distinguishing between birds and fish.
             </p>
         </section>
 
