Added header and corrected nav

--- a/index.html
+++ b/index.html
@@ -6,12 +6,16 @@
     <title>Benjamin's Portfolio</title>
 </head>
 <body>
-    <h1>Welcome to Benjamin's Portfolio</h1>
+    <header>
+        <h1>Welcome to Benjamin's Portfolio</h1>
+    </header>
+    
     <nav>
+        <!--<nav> with ul containing 3 li>a elements-->
         <ul>
-            <li href="#">Home</li>
-            <li href="#">Projects</li>
-            <li href="#">Contact</li>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Projects</a></li>
+            <li><a href="#">Contact</a></li>
         </ul>
     </nav>
 
